// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProductTour > renders correctly if all list items are already completed and tour is closed 1`] = `
<div
  class="product-tour-container"
  data-v-09eab3b7=""
>
  <slide-y-reverse-transition-stub
    data-v-09eab3b7=""
    disabled="false"
    group="false"
    hideonleave="false"
    leaveabsolute="false"
    mode="out-in"
  >
    <!--v-if-->
  </slide-y-reverse-transition-stub>
  <fade-transition-stub
    data-v-09eab3b7=""
    disabled="false"
    group="false"
    hideonleave="false"
    leaveabsolute="false"
    mode="out-in"
  >
    <!--v-if-->
  </fade-transition-stub>
</div>
`;

exports[`ProductTour > renders correctly if all list items are already completed and tour is not closed 1`] = `
<div
  class="product-tour-container"
  data-v-09eab3b7=""
>
  <slide-y-reverse-transition-stub
    data-v-09eab3b7=""
    disabled="false"
    group="false"
    hideonleave="false"
    leaveabsolute="false"
    mode="out-in"
  >
    <!--v-if-->
  </slide-y-reverse-transition-stub>
  <fade-transition-stub
    data-v-09eab3b7=""
    disabled="false"
    group="false"
    hideonleave="false"
    leaveabsolute="false"
    mode="out-in"
  >
    <evocon-v-button-stub
      class="product-tour-activator"
      color="primary"
      data-v-09eab3b7=""
      icon="M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M12 20C7.59 20 4 16.41 4 12S7.59 4 12 4 20 7.59 20 12 16.41 20 12 20M16.59 7.58L10 14.17L7.41 11.59L6 13L10 17L18 9L16.59 7.58Z"
      iconcolor=""
      text="Learn Reports"
      textclass=""
      type="primary"
    />
  </fade-transition-stub>
</div>
`;

exports[`ProductTour > renders correctly if all list items will be completed and product tour is still visible 1`] = `
<div
  class="product-tour-container"
  data-v-09eab3b7=""
>
  <slide-y-reverse-transition-stub
    data-v-09eab3b7=""
    disabled="false"
    group="false"
    hideonleave="false"
    leaveabsolute="false"
    mode="out-in"
  >
    <div
      data-v-09eab3b7=""
    >
      <slide-x-reverse-transition-stub
        data-v-09eab3b7=""
        disabled="false"
        group="false"
        hideonleave="false"
        leaveabsolute="false"
        mode="out-in"
      >
        <v-card-stub
          border="false"
          class="pt-2 mb-2"
          data-v-09eab3b7=""
          density="default"
          disabled="false"
          exact="false"
          flat="false"
          hover="false"
          loading="false"
          replace="false"
          ripple="true"
          tag="div"
          theme="light"
          tile="false"
          variant="elevated"
          width="350"
        >
          <div
            class="py-2 px-4 d-flex justify-space-between"
            data-v-09eab3b7=""
          >
            <div
              class="flex-column"
              data-v-09eab3b7=""
            >
              <v-card-title-stub
                class="pa-0 d-flex align-center"
                data-v-09eab3b7=""
                tag="div"
              >
                Learn Reports 
                <v-icon-stub
                  class="ml-1"
                  color="primary"
                  data-v-09eab3b7=""
                  disabled="false"
                  end="false"
                  size="24"
                  start="false"
                  tag="i"
                >
                  M10,17L5,12L6.41,10.58L10,14.17L17.59,6.58L19,8M19,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3Z
                </v-icon-stub>
              </v-card-title-stub>
              <span
                data-v-09eab3b7=""
              >
                How Evocon supports the analysis of your production data.
              </span>
            </div>
            <evocon-v-button-stub
              color=""
              data-v-09eab3b7=""
              icon="M12,2C17.53,2 22,6.47 22,12C22,17.53 17.53,22 12,22C6.47,22 2,17.53 2,12C2,6.47 6.47,2 12,2M15.59,7L12,10.59L8.41,7L7,8.41L10.59,12L7,15.59L8.41,17L12,13.41L15.59,17L17,15.59L13.41,12L17,8.41L15.59,7Z"
              iconcolor=""
              size="small"
              text=""
              textclass=""
              type="primary"
            />
          </div>
          <div
            class="py-2 px-4"
            data-v-09eab3b7=""
          >
            <v-progress-linear-stub
              absolute="false"
              active="true"
              buffervalue="0"
              chunkgap="4"
              clickable="false"
              data-v-09eab3b7=""
              height="8"
              indeterminate="false"
              location="top"
              max="100"
              modelvalue="100"
              reverse="false"
              rounded="true"
              roundedbar="false"
              stream="false"
              striped="false"
              tag="div"
              tile="false"
            />
          </div>
          <selection-list-stub
            checkbox="false"
            data-v-09eab3b7=""
            dense="false"
            disabled="false"
            emptyequalsallselected="false"
            height="auto"
            hidesearch="true"
            hideselectall="false"
            icon="(item) => {
  if (item.isCompleted) return __vite_ssr_import_2__.mdiCheckboxMarkedCircle;
  return __vite_ssr_import_2__.mdiCircleOutline;
}"
            iconcolor="[Function]"
            isdropdown="true"
            issearchfocused="false"
            issingleselect="true"
            itemdisabled=""
            itemflag=""
            itemiconcolorkey=""
            items="[object Object],[object Object],[object Object],[object Object]"
            itemsecondarytext=""
            itemtertiarytext=""
            itemtext="title"
            itemvalue="id"
            loading="false"
            maxheight=""
            maxwidth=""
            modelvalue=""
            required="false"
            search=""
            searchbysecondarytext="false"
            someselected="false"
            valid="true"
          />
        </v-card-stub>
      </slide-x-reverse-transition-stub>
    </div>
  </slide-y-reverse-transition-stub>
  <fade-transition-stub
    data-v-09eab3b7=""
    disabled="false"
    group="false"
    hideonleave="false"
    leaveabsolute="false"
    mode="out-in"
  >
    <!--v-if-->
  </fade-transition-stub>
</div>
`;

exports[`ProductTour > renders correctly if highestRoleAllows is false 1`] = `<!--v-if-->`;

exports[`ProductTour > renders correctly if list is opened and none of the flows are selected 1`] = `
<div
  class="product-tour-container"
  data-v-09eab3b7=""
>
  <slide-y-reverse-transition-stub
    data-v-09eab3b7=""
    disabled="false"
    group="false"
    hideonleave="false"
    leaveabsolute="false"
    mode="out-in"
  >
    <div
      data-v-09eab3b7=""
    >
      <slide-x-reverse-transition-stub
        data-v-09eab3b7=""
        disabled="false"
        group="false"
        hideonleave="false"
        leaveabsolute="false"
        mode="out-in"
      >
        <v-card-stub
          border="false"
          class="pt-2 mb-2"
          data-v-09eab3b7=""
          density="default"
          disabled="false"
          exact="false"
          flat="false"
          hover="false"
          loading="false"
          replace="false"
          ripple="true"
          tag="div"
          theme="light"
          tile="false"
          variant="elevated"
          width="350"
        >
          <div
            class="py-2 px-4 d-flex justify-space-between"
            data-v-09eab3b7=""
          >
            <div
              class="flex-column"
              data-v-09eab3b7=""
            >
              <v-card-title-stub
                class="pa-0 d-flex align-center"
                data-v-09eab3b7=""
                tag="div"
              >
                Learn Reports 
                <!--v-if-->
              </v-card-title-stub>
              <span
                data-v-09eab3b7=""
              >
                How Evocon supports the analysis of your production data.
              </span>
            </div>
            <evocon-v-button-stub
              color=""
              data-v-09eab3b7=""
              icon="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
              iconcolor=""
              size="small"
              text=""
              textclass=""
              type="primary"
            />
          </div>
          <div
            class="py-2 px-4"
            data-v-09eab3b7=""
          >
            <v-progress-linear-stub
              absolute="false"
              active="true"
              buffervalue="0"
              chunkgap="4"
              clickable="false"
              data-v-09eab3b7=""
              height="8"
              indeterminate="false"
              location="top"
              max="100"
              modelvalue="0"
              reverse="false"
              rounded="true"
              roundedbar="false"
              stream="false"
              striped="false"
              tag="div"
              tile="false"
            />
          </div>
          <selection-list-stub
            checkbox="false"
            data-v-09eab3b7=""
            dense="false"
            disabled="false"
            emptyequalsallselected="false"
            height="auto"
            hidesearch="true"
            hideselectall="false"
            icon="(item) => {
  if (item.isCompleted) return __vite_ssr_import_2__.mdiCheckboxMarkedCircle;
  return __vite_ssr_import_2__.mdiCircleOutline;
}"
            iconcolor="[Function]"
            isdropdown="true"
            issearchfocused="false"
            issingleselect="true"
            itemdisabled=""
            itemflag=""
            itemiconcolorkey=""
            items="[object Object],[object Object],[object Object],[object Object]"
            itemsecondarytext=""
            itemtertiarytext=""
            itemtext="title"
            itemvalue="id"
            loading="false"
            maxheight=""
            maxwidth=""
            modelvalue=""
            required="false"
            search=""
            searchbysecondarytext="false"
            someselected="false"
            valid="true"
          />
        </v-card-stub>
      </slide-x-reverse-transition-stub>
    </div>
  </slide-y-reverse-transition-stub>
  <fade-transition-stub
    data-v-09eab3b7=""
    disabled="false"
    group="false"
    hideonleave="false"
    leaveabsolute="false"
    mode="out-in"
  >
    <evocon-v-button-stub
      class="product-tour-activator"
      color="primary"
      data-v-09eab3b7=""
      icon="M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M12 20C7.59 20 4 16.41 4 12S7.59 4 12 4 20 7.59 20 12 16.41 20 12 20M16.59 7.58L10 14.17L7.41 11.59L6 13L10 17L18 9L16.59 7.58Z"
      iconcolor=""
      text="Learn Reports"
      textclass=""
      type="primary"
    />
  </fade-transition-stub>
</div>
`;

exports[`ProductTour > renders correctly if list is opened and one of the flows is selected 1`] = `
<div
  class="product-tour-container"
  data-v-09eab3b7=""
>
  <slide-y-reverse-transition-stub
    data-v-09eab3b7=""
    disabled="false"
    group="false"
    hideonleave="false"
    leaveabsolute="false"
    mode="out-in"
  >
    <div
      data-v-09eab3b7=""
    >
      <slide-x-reverse-transition-stub
        data-v-09eab3b7=""
        disabled="false"
        group="false"
        hideonleave="false"
        leaveabsolute="false"
        mode="out-in"
      >
        <product-tour-flow-card-stub
          data-v-09eab3b7=""
          markcompleteonlaststep="true"
          steps="[object Object],[object Object]"
        />
      </slide-x-reverse-transition-stub>
    </div>
  </slide-y-reverse-transition-stub>
  <fade-transition-stub
    data-v-09eab3b7=""
    disabled="false"
    group="false"
    hideonleave="false"
    leaveabsolute="false"
    mode="out-in"
  >
    <!--v-if-->
  </fade-transition-stub>
</div>
`;

exports[`ProductTour > renders correctly if module is not recognized 1`] = `<!--v-if-->`;
